--- a/Vaksol/index-ru.html
+++ b/Vaksol/index-ru.html
@@ -8,6 +8,17 @@
     <link rel="shortcut icon" href="./images/icon.png" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133309215-23"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+ 
+
+  gtag('config', 'UA-133309215-23');
+</script>
 </head>
 <body>
 
@@ -53,7 +64,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang" href="index.html"><p>UA  <b>RU</b></p></a>
+                            <a class="lang lang-dop" href="index.html"><p>UA </p></a><a class="lang"><b>RU</b></a>
                         </li>
                     </ul>
                 </div>
@@ -95,6 +106,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ и развлечения на воде</b><br>Взрослым и детям во время активного отдыха</p>
+                <div class="factors-mob">читать больше</div>
             </div>
 
         </div>
@@ -106,6 +118,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ и гарнитура</b><br>Для тех, кто не расстается с музыкой и разговорами</p>
+                <div class="factors-mob">читать больше</div>
             </div>
         </div>
         <div class="factors-plate factors-plate-3">
@@ -115,6 +128,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ та басейн</b><br>Для спортсменів та любителів плавання</p>
+                <div class="factors-mob">читать больше</div>
             </div>
         </div>
         <div class="factors-plate factors-plate-4">
@@ -124,6 +138,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ и слуховые аппараты</b><br>Для людей с проблемами слуха</p>
+                <div class="factors-mob">читать больше</div>
             </div>
         </div>
 
