--- a/Vaksol/index.html
+++ b/Vaksol/index.html
@@ -8,6 +8,17 @@
     <link rel="shortcut icon" href="./images/icon.png" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133309215-23"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+ 
+
+  gtag('config', 'UA-133309215-23');
+</script>
 </head>
 <body>
 
@@ -53,7 +64,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang" href="index-ru.html"><p><b>UA</b>  RU</p></a>
+                            <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
                         </li>
                     </ul>
                 </div>
@@ -95,6 +106,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ та розваги на воді</b><br>Дорослим та дітям під час активного відпочинку</p>
+                <div class="factors-mob">читати більше</div>
             </div>
 
         </div>
@@ -106,6 +118,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ та гарнітура</b><br>Для тих, хто не розлучається з музикою та розмовами</p>
+                <div class="factors-mob">читати більше</div>
             </div>
         </div>
         <div class="factors-plate factors-plate-3">
@@ -115,6 +128,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ та басейн</b><br>Для спортсменів та любителів плавання</p>
+                <div class="factors-mob">читати більше</div>
             </div>
         </div>
         <div class="factors-plate factors-plate-4">
@@ -124,6 +138,7 @@
             <div class="factors-img"></div>
             <div class="factors-img_text">
                 <p><b>ВАКСОЛ та слухові апарати</b><br>Для людей з вадами слуху</p>
+                <div class="factors-mob">читати більше</div>
             </div>
         </div>
 
