--- a/Vaksol/index-ru.html
+++ b/Vaksol/index-ru.html
@@ -5,7 +5,7 @@
     <a class="logo"></a>
     <meta name="description" content="vaksol"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="shortcut icon" href="./images/icon.png" type="image/png"/>
+    <link rel="shortcut icon" href="./images/Vector (1).svg" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -91,11 +91,11 @@
         <b>ВАКСОЛ Пробку<br> удаляет, слух возвращает</b>
         <div class="header-title_product"></div>
     </div>
-<a name="block-1"></a>
 
 
 
     <div class="factors">
+    	<div class="puppet"><a name="block-1"></a></div>
         <h4>Какие факторы способствуют образованию<br><b>серных пробок?</b></h4>
         <div class="factors-container">
 
