--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<a href="Tansilotren-AZ/index.html">Tansilotren-AZ</a>
 			<a href="Tansilotren-BY/index.html">Tansilotren-BY</a>
 			<a href="Vaksol/index.html">Vaksol</a>
+			<a href="Solidagoren/index.html">Solidagoren</a>
 
 			
 		</section>
@@ -189,6 +190,9 @@
 	}
 	a:nth-child(36)::before {
 		background: url("./Vaksol/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(37)::before {
+		background: url("./Solidagoren/bg.jpg")no-repeat center / cover;
 	}
 </style>
 
