--- a/Solidagoren/index.html
+++ b/Solidagoren/index.html
@@ -281,16 +281,32 @@
                     <p class="diet-subtitle">Лікувальна дієта №14</p>
                     <p class="diet-title">при сечокам'яній хворобі</p>
                     <div class="diet-btn-container">
-                        <a href="" class="diet_btn">прочитати дієту</a>
-                        <a href="" class="diet_btn">завантажити дієту</a>
+                        <div class="diet-acc">
+                            <button class="accordion diet_btn">прочитати дієту</button>
+                            <div class="panel">
+                                <p>
+                                    Лікувальна дієта №14, при сечокам'яній хворобі
+                                    Раціон дієти знаходиться у межах фізіологічної норми за показниками енергетичної цінності, кількості білків, жирів та вуглеводів. Дещо обмежена кількість продуктів, що чинять лужну дію та багаті на кальцій - молочні продукти, більшість овочів та плодів. Перевага надається продуктам, які змінюють реакцію сечі у кислу сторону - хліб, вироби із борошна, крупи, м'ясо, риба. Дозволені звичайна кулінарна обробка та стандартна температура страв. Якщо немає відповідних протипоказань, рекомендоване посилене споживання рідини. Рекомендований 4-разовий режим харчування та пиття між прийомами їжі і натщесерце.
+                                </p>
+                            </div>
+                        </div>
+                        <a class=" diet_btn">завантажити дієту</a>
                     </div>
                 </div>
                 <div class="diet-container">
                     <p class="diet-subtitle">Лікувальна дієта №7</p>
                     <p class="diet-title">при захворюваннях нирок</p>
                     <div class="diet-btn-container">
-                        <a href="" class="diet_btn">прочитати дієту</a>
-                        <a href="" class="diet_btn">завантажити дієту</a>
+                        <div class="diet-acc">
+                            <button class="accordion diet_btn">прочитати дієту</button>
+                            <div class="panel">
+                                <p>
+                                    Лікувальна дієта №7, при захворюваннях нирок
+                                    При лікувальній дієті дещо обмежується споживання білків. Вміст жирів та вуглеводів залишається у рамках фізіологічної норми. Страви готують без солі. Дозволено споживання приблизно 1 л рідини на добу. Забороненими є екстрактивні речовини, що містяться у рибі, м'ясі, грибах. Не допускаються, також, продукти, що містять щавлеву кислоту та ефірні масла. Їжу готують в умовах помірного хімічного щадіння. М'ясо та рибу перед споживанням варто відварити. Забороненими є міцна кава, какао, мінеральна вода із підвищеним вмістом натрію. Рекомендованою є звичайна температура їжі.
+                                </p>
+                            </div>
+                        </div>
+                        <a class="diet_btn">завантажити дієту</a>
                     </div>
                 </div>
 
