--- a/Solidagoren/index.html
+++ b/Solidagoren/index.html
@@ -8,6 +8,11 @@
     <link rel="shortcut icon" href="./images/" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 </head>
 <body>
 
@@ -117,7 +122,7 @@
 
     <div class="stories-block">
         <h4>Цистит скасовує нашу подорож?</h4>
-        <div class="story">
+        <div class="story story1">
 
             <div class="story-container story-container-light">
                 <div class="story-text">
@@ -139,11 +144,13 @@
                             <li>Краплі, на відміну від таблеток, ..... (спиртові краплі не потребують допоміжних речовин, на відміну від таблеток / всмоктуюються одразу …)</li>
 
                         </ul>
+                        <div class=test1end></div>
                     </div>
 
                 </div>
             </div>
-            <div class="story-photo"></div>
+            <div class="story-photo story-photo1"></div>
+            <div class=test1></div>
         </div>
     </div>
 
@@ -203,12 +210,14 @@
                         </li>
 
                     </ul>
+                    <div class=test2end></div>
                 </div>
 
 
             </div>
         </div>
         <div class="story-photo story-photo-2"></div>
+        <div class=test2></div>
     </div>
 </div>
 
@@ -240,11 +249,13 @@
                     <p>
                         Тривалість застосування лікарського засобу визначається лікарем і залежить від перебігу та тяжкості захворювання. Якщо симптоми захворювання не зменшуються, або виникають будь-які побічні реакції, необхідно припинити застосування цього лікарського засобу та проконсультуватися з лікарем.
                     </p>
+                    <div class=test3end></div>
                 </div>
 
             </div>
         </div>
         <div class="story-photo story-photo-3"></div>
+        <div class=test3></div>
     </div>
 </div>
 
@@ -308,12 +319,14 @@
                         </div>
                         <a class="diet_btn">завантажити дієту</a>
                     </div>
+                    <div class=test4end></div>
                 </div>
 
 
             </div>
         </div>
         <div class="story-photo story-photo-4"></div>
+        <div class=test4></div>
     </div>
 </div>
 
