--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -117,7 +117,7 @@
             </div>
         </div>
     </div>
-
+<a name="block-1"></a>
 
     <div class="stories-block">
         <h4>Цистит отменяет наше путешествие? </h4>
@@ -154,7 +154,7 @@
     </div>
 
 <!--story2-->
-
+<div class='puppet'><a name="block-2"></a></div>
 
 <div class="stories-block stories-block-2">
     <h4>Когда каждая АЗС – это туалет </h4>
@@ -223,7 +223,7 @@
 
 <!--story3-->
 
-
+<div class='puppet'><a name="block-3"></a></div>
 <div class="stories-block stories-block-3">
     <h4>Несколько дней спустя ... </h4>
     <div class="story">
@@ -260,7 +260,7 @@
 
 
 <!--story4-->
-
+<div class='puppet'><a name="block-4"></a></div>
 
 <div class="stories-block stories-block-4">
     <h4>Хранить в недоступном для зятя месте </h4>
