--- a/Solidagoren/index.html
+++ b/Solidagoren/index.html
@@ -118,6 +118,7 @@
             </div>
         </div>
     </div>
+    <a name="block-1"></a>
 
 
     <div class="stories-block">
@@ -155,6 +156,7 @@
     </div>
 
 <!--story2-->
+<div class='puppet'><a name="block-2"></a></div>
 
 
 <div class="stories-block stories-block-2">
@@ -224,6 +226,7 @@
 <div class="product-center"></div>
 
 <!--story3-->
+<div class='puppet'><a name="block-3"></a></div>
 
 
 <div class="stories-block stories-block-3">
@@ -262,6 +265,7 @@
 
 
 <!--story4-->
+<div class='puppet'><a name="block-4"></a></div>
 
 
 <div class="stories-block stories-block-4">
