--- a/influcid-Uzbekistan/index.html
+++ b/influcid-Uzbekistan/index.html
@@ -31,7 +31,7 @@
                 <li><a class="navmenu" href="#block-1" >Афзалликлари</a></li>
                 <li><a class="navmenu" href="#block-2" >Эффектлар</a></li>
                 <li><a class="navmenu" href="#block-3" >Таркиби</a></li>
-                <li><a class="navmenu" href="#block-4" >кулланилиши</a></li>
+                <li><a class="navmenu" href="#block-4" >Кулланилиши</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
                 <li><a href="index-usb.html" >uzb</a></li>
               </ul>
@@ -41,7 +41,7 @@
             <a class="navmenu" href="#block-1" >Афзалликлари</a>
               <a class="navmenu" href="#block-2" >Эффектлар</a>
               <a class="navmenu" href="#block-3" >Таркиби</a>
-              <a class="navmenu" href="#block-4" >кулланилиши</a>
+              <a class="navmenu" href="#block-4" >Кулланилиши</a>
               <a class="where-to-buy" href="#block-5" >Where to buy</a>
               <a href="index-usb.html" >uzb</a>
           </div>
