--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -73,17 +73,17 @@
 
     <div class="header-custom header-custom-ru">
             <div class="header-title">
-                <b>Солидагорен<br> <p>Не став життя на паузу<br>через цистит!</p></b>
+                <b>Солидагорен<br> <p>Не ставь жизнь на паузу <br>из-за цистита!</p></b>
                 <div class="header-title_product"></div>
-                <p class="header-title_subtext"><b>НАТУРАЛЬНЕ</b> лікування циститу<br>
-                    Подорожуймо без зайвих зупинок</p>
+                <p class="header-title_subtext"><b>Натуральное</b> лечение цистита<br>
+                    Путешествуем без лишних остановок</p>
             </div>
     </div>
     <div class="custom-mob">
-        <b>Солидагорен<br> <p>Не став життя на паузу через цистит!</p></b>
+        <b>Солидагорен<br> <p>Не ставь жизнь на паузу из-за цистита!</p></b>
         <div class="header-title_product"></div>
-        <p class="custom-mob_sub"><b>НАТУРАЛЬНЕ</b> лікування циститу
-            Подорожуймо без зайвих зупинок</p>
+        <p class="custom-mob_sub"><b>Натуральное</b> лечение цистита
+            Путешествуем без лишних остановок</p>
     </div>
 
 
