--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -171,7 +171,7 @@
                 <div class="clock-img"></div>
                 <div class="pill-container pill3"></div>
               </div>
-              <div class="subcontainer-particle-1">
+              <!-- <div class="subcontainer-particle-1">
                 <b>
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
@@ -181,7 +181,7 @@
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
                 <div class="pill-container pill3"></div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -201,7 +201,7 @@
                 <div class="clock-img"></div>
                 <div class="pill-container pill4"></div>
               </div>
-              <div class="subcontainer-particle-1">
+              <!-- <div class="subcontainer-particle-1">
                 <b>
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
@@ -211,7 +211,7 @@
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
                 <div class="pill-container pill3"></div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -225,14 +225,14 @@
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
                 <b>В 1-2  СУТКИ</b>
-                <b class="subtext">Каждые час</b>
+                <b class="subtext">Каждый час</b>
                 <p>по 1 таблетке до 6 таблеток в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
                 <div class="pill-container pill6"></div>
               </div>
-              <div class="subcontainer-particle-1">
+              <!-- <div class="subcontainer-particle-1">
                 <b>
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
@@ -242,7 +242,7 @@
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
                 <div class="pill-container pill3"></div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -257,10 +257,10 @@
             При лечении детей до 6 лет таблетки рекомендуется  растворять в небольшом количестве  воды;
 
           </p>
-          <p>
+          <!-- <p>
             Длительность приема препарата Инфлюцид для лечения ОРВИ и гриппа – 1 неделя;
 
-          </p>
+          </p> -->
           <p>
             Применение препарата Инфлюцид во время беременности и лактации возможно после консультации с врачом.
 
