--- a/influcid-RS/index.html
+++ b/influcid-RS/index.html
@@ -169,7 +169,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Deca do 12 godina:</b> po 1 tabletu na svaka 2 sata do poboljšanja stanja, a najviše 8 tableta dnevno. U nastavku terapije treba uzimati po 1 tabletu 3 puta na dan.
+              <b>Deca od 3 do 12 godina:</b> po 1 tabletu na svaka 2 sata do poboljšanja stanja, a najviše 8 tableta dnevno. U nastavku terapije treba uzimati po 1 tabletu 3 puta na dan.
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
