--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -176,7 +176,7 @@
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
                 <b class="subtext">До полного выздоровления</b>
-                <p>По 1/2 таблетки 3 раза в день</p>
+                <p>По 1/2 таблетке 3 раза в день</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -196,7 +196,7 @@
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
                 <b class="subtext">До полного выздоровления</b>
-                <p>1 таблетки 3 раза в сутки</p>
+                <p>1 таблетке 3 раза в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -217,7 +217,7 @@
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
                 <b class="subtext">До полного выздоровления</b>
-                <p>По 1-2 таблетки 3 раза в день</p>
+                <p>По 1-2 таблетке 3 раза в день</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -234,7 +234,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 3 до 6 лет:</b>  рассасывать по 1/2 таблетки 2 раза в день
+              <b>Детям от 3 до 6 лет:</b>  рассасывать по 1/2 таблетке 2 раза в день
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
@@ -243,7 +243,7 @@
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
-                <div class="pill-container pill3"></div>
+                <div class="pill-container pill2"></div>
               </div>
             </div>
           </div>
@@ -259,7 +259,7 @@
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
-                <div class="pill-container pill6"></div>
+                <div class="pill-container pill2"></div>
               </div>
             </div>
           </div>
@@ -271,7 +271,7 @@
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
-                <div class="pill-container pill6"></div>
+                <div class="pill-container pill3"></div>
               </div>
             </div>
           </div>
@@ -283,15 +283,15 @@
             Применение препарата при первых проявлениях симптомов ОРВИ и гриппа или сразу после контакта с людьми, которые заболели, способствует предотвращению развития заболевания;
 
           </p>
-          <p>
+          <!-- <p>
             Длительность приёма препарата Инфлюцид после контакта с больными гриппом или ОРВИ - 1 неделя;
 
-          </p>
+          </p> -->
         </div>
         <div class="bottom-text__b">
           <b>
             Таблетки медленно рассасывать во рту до полного растворения.  
-Детям до 3 лет рекомендуется растворять таблетку в небольшом количестве жидкости или давать в измельченном виде, под язык. 
+Детям до 5 лет рекомендуется растворять таблетку в небольшом количестве жидкости или давать в измельченном виде, под язык. 
 Препарат принимать за полчаса до или через полчаса после еды
           </b>
         </div>
