--- a/influcid-Romania/index-en.html
+++ b/influcid-Romania/index-en.html
@@ -161,7 +161,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Children from 1 year to 12 years:</b> dissolve 1 tablet every 2 hours until complete dissolution (not more than 8 tablets per day) until improvement
+              <b>Children from 1 year to 6 years:</b> dissolve 1 tablet every 2 hours until complete dissolution (not more than 8 tablets per day) until improvement
               
             </p>
             <div class="subcontainer">
@@ -217,7 +217,7 @@
           </div>
         </div>
         <p class="block-5__container-btext">
-          Treatment duration: 7-10 days until complete recovery
+          <!-- Treatment duration: 7-10 days until complete recovery -->
         </p>
         <h3>For ARVI prevention</h3>
 
