--- a/influcid-Romania/index.html
+++ b/influcid-Romania/index.html
@@ -168,7 +168,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Copii de la 1-12 ani:</b> se dizolvă complet în gură 1 comprimat  la fiecare 2 ore (nu mai mult de 8 comprimate pe zi) până la ameliorare
+              <b>Copii de la 1-6 ani:</b> se dizolvă complet în gură 1 comprimat  la fiecare 2 ore (nu mai mult de 8 comprimate pe zi) până la ameliorare
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -223,7 +223,7 @@
           </div>
         </div>
         <p class="block-5__container-btext">
-          Durata tratamentului: 7-10 zile până la recuperarea completă
+          <!-- Durata tratamentului: 7-10 zile până la recuperarea completă -->
         </p>
         <h3>Pentru prevenirea IRVA</h3>
 
