--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -104,7 +104,7 @@
             </p>
         </div>
         <div class="block-1_simptoms">
-            <div class="block-1_simptoms-img"></div>
+            <div class="block-1_simptoms-img block-1_simptoms-img-ru"></div>
             <div class="block-1_simptoms-text">
                 <p>частое и болезненное мочеиспускание</p>
                 <p>боль в проекции мочевого пузыря <br> (лобковая участок, промежность) и мочеиспускательного канала</p>
