--- a/influcid-Uzbekistan/index.html
+++ b/influcid-Uzbekistan/index.html
@@ -23,7 +23,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">КАЕРДАН</a>
+          <a class="where-to-buy where-to-buy__desktop" href="#block-5">КАЕРДА БО</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -42,7 +42,7 @@
               <a class="navmenu" href="#block-2" >Эффектлар</a>
               <a class="navmenu" href="#block-3" >Таркиби</a>
               <a class="navmenu" href="#block-4" >Кулланилиши</a>
-              <a class="where-to-buy" href="#block-5" >КАЕРДАН</a>
+              <a class="where-to-buy" href="#block-5" >КАЕРДА БО</a>
               <a href="index-usb.html" >uzb</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
@@ -267,7 +267,7 @@
             Таблеткани аста-секин оғизда тўлиқ эригунча ушланг. 3 ёшгача бўлган болалар учун таблеткани оз миқдорда суюқликда эритиб ёки майдаланган ҳолда, тил остида бериш тавсия этилади. Дорини овқатдан ярим соат олдин ёки ярим соатдан кейин истеъмол қилиш керак.
           </b>
         </div>
-        <a class="buy-btn pill-btn"><p>КАЕРДАН?</p></a>
+        <a class="buy-btn pill-btn"><p>КАЕРДА БО?</p></a>
       </div>
 
 
