--- a/influcid-Uzbekistan/index-usb.html
+++ b/influcid-Uzbekistan/index-usb.html
@@ -23,7 +23,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Where to buy</a>
+          <a class="where-to-buy where-to-buy__desktop" href="#block-5">kaerda bo</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -42,7 +42,7 @@
               <a class="navmenu" href="#block-2" >Effektlar</a>
               <a class="navmenu" href="#block-3" >Tarkibi</a>
               <a class="navmenu" href="#block-4" >Qollanilishi</a>
-              <a class="where-to-buy" href="#block-5" >Where to buy</a>
+              <a class="where-to-buy" href="#block-5" >kaerda bo</a>
               <a href="index.html" >узб</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
@@ -267,7 +267,7 @@
             Og`zingizda sekin eridigan tabletkalar.Yosh bollar uchun 3 yoshdan kattalarga tabletkani suyug`lik bilan eritib berishni tafsiya etiladi yoki uni mayda bo`lakchalarga bo`lib berish kerak. Dorini yarim soat oldin yoki kegin ovqatdan so`ng istemol qilish kerak.
           </b>
         </div>
-        <a class="buy-btn pill-btn"><p>WHERE TO BUY?</p></a>
+        <a class="buy-btn pill-btn"><p>kaerda bo?</p></a>
       </div>
 
 
