--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -20,7 +20,7 @@
 <a name='top'></a>
     <div class="outer-navigation-container">
         <div class="navigation-container">
-            <a class="logo-container" href="#top"></a>
+            <a class="logo-container logo-container-ru" href="#top"></a>
             <a class="where-to-buy-mob" href="#block-6">Где купить</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Преимущества</a>
