--- a/Vaksol/index-ru.html
+++ b/Vaksol/index-ru.html
@@ -81,6 +81,10 @@
 
 <!--    end navigation-->
 
+
+<a class="fixed-link" href="https://liki24.com/index.php?route=checkout/custom_cart&cart_id=66410&utm_source=sprey&utm_medium=re">Заказать доставку</a>
+
+
     <div class="header-custom">
             <div class="header-title">
                 <b>ВАКСОЛ<br> Пробку удаляет, <br>слух возвращает</b>
