--- a/Vaksol/index.html
+++ b/Vaksol/index.html
@@ -79,6 +79,9 @@
             <p class="translated-text" key="instruction">Інструкція</p>
       </a>
 
+
+<a class="fixed-link" href="https://liki24.com/index.php?route=checkout/custom_cart&cart_id=66410&utm_source=sprey&utm_medium=re">Замовити доставку</a>
+
 <!--    end navigation-->
 
     <div class="header-custom">
