--- a/bioelektra/index-sport.html
+++ b/bioelektra/index-sport.html
@@ -57,7 +57,8 @@
         <div class="content-container">
             <div class="content">
                 <p><b>БІОЛЕКТРА</b><br>
-                    тренувань багато - джерело магнію одне!</p>
+                     зручна доза Магнію.
+					Спортсмени за ідеальну форму.</p>
                 <div class="content-img content-img-str"></div>
                 <div class="text-2">
                     <p class="germ">Зроблено в Німеччині</p>
