--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 			<a href="Tansilotren-BY/index.html">Tansilotren-BY</a>
 			<a href="Vaksol/index.html">Vaksol</a>
 			<a href="Solidagoren/index.html">Solidagoren</a>
+			<a href="gastritol-new/index.html">gastritol-new</a>
 
 			
 		</section>
@@ -193,6 +194,9 @@
 	}
 	a:nth-child(37)::before {
 		background: url("./Solidagoren/bg.jpg")no-repeat center / cover;
+	}
+	a:nth-child(38)::before {
+		background: url("./gastritol-new/bg.jpg")no-repeat center / cover;
 	}
 </style>
 
