--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -250,20 +250,20 @@
                 <p class="block-5_text-title">Не зажигай<br><b>Слизистую оболочку желудка</b></p>
                 <div class="block-5_btn">
                     <div>
-                        <p><b>Харчування</b> при лікуванні хвороб<br>
-                            шлунково - кишкового тракту </p>
-                        <a>завантажити ДІЄТУ</a>
+                        <p><b>Питание</b> при лечении болезней<br>
+                            желудочно - кишечного тракта</p>
+                        <a>сохрани диету</a>
                     </div>
                     <div class="block-5_btn-img"></div>
                 </div>
             </div>
             <div class="block-5_num-container">
-                <div class="block-5_num"><strong>6</strong><br><b>кратне </b><br> <p>харчування на добу</p></div>
-                <div class="block-5_num"><strong>2</strong><br><b>чашки </b><br> <p>кави на день, максимум</p></div>
-                <div class="block-5_num"><strong>30</strong><br><b>крапель </b><br> <p>Гастритол 3 рази на добу</p></div>
-                <div class="block-5_num"><strong>3</strong><br><b>ГОДИНИ </b><br> <p>інтервал між вечерею та сном</p></div>
-                <div class="block-5_num"><strong>37</strong><br><b>ГРАДУСІВ </b><br> <p>приблизна температура їжі</p></div>
-                <div class="block-5_num"><strong>3</strong><br><b>місяці </b><br> <p>оптимальна дієта при гастриті</p></div>
+                <div class="block-5_num"><strong>6</strong><br><b>кратное </b><br> <p>питание в сутки </p></div>
+                <div class="block-5_num"><strong>2</strong><br><b>чашки </b><br> <p>кофе в день , максимум </p></div>
+                <div class="block-5_num"><strong>30</strong><br><b>капель </b><br> <p>Гастритол 3 раза в сутки</p></div>
+                <div class="block-5_num"><strong>3</strong><br><b>часа </b><br> <p>интервал между ужином и сном</p></div>
+                <div class="block-5_num"><strong>37</strong><br><b>ГРАДУСоВ </b><br> <p>приблизительная температура пищи</p></div>
+                <div class="block-5_num"><strong>3</strong><br><b>месяца </b><br> <p>оптимальная диета при гастрите</p></div>
             </div>
         </div>
     </div>
@@ -283,7 +283,7 @@
 
 
         <div class="map-text">
-            <p><b>Гастритол</b> можна знайти<br> в аптеці поблизу</p>
+            <p><b>Гастритол</b> можно найти<br> в аптеке поблизости</p>
         </div>
 <div id="comp_wgt" data-drug="55954,55955,115204" data-lang="ru" data-url="https://compendium.com.ua/info/167719/gastritol-dr-kljajn-/" data-proj="гастритол" style="border-color: #0A1318; width: 80%;"><div class="title" style="background: #0A1318;"><a href="https://compendium.com.ua/info/167719/gastritol-dr-kljajn-/" title="ГАСТРИТОЛ &quot;ДР. КЛЯЙН&quot;, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
     <div class="disclamer-tra__inner">
