--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<a href="Tansilotren-BY/index.html">Tansilotren-BY</a>
 			<a href="Vaksol/index.html">Vaksol</a>
 			<a href="Solidagoren/index.html">Solidagoren</a>
-			<a href="gastritol-new/index.html">gastritol-new</a>
+			<!-- <a href="gastritol-new/index.html">gastritol-new</a> -->
 
 			
 		</section>
