--- a/bioelektra/index-sport.html
+++ b/bioelektra/index-sport.html
@@ -57,7 +57,7 @@
         <div class="content-container">
             <div class="content">
                 <p><b>БІОЛЕКТРА</b><br>
-                     зручна доза Магнію.
+                     зручна форма Магнію.
 					Спортсмени за ідеальну форму.</p>
                 <div class="content-img content-img-str"></div>
                 <div class="text-2">
